--- a/src/pages/Dashboard/Calender/Calender.css
+++ b/src/pages/Dashboard/Calender/Calender.css
@@ -18,13 +18,12 @@
      margin-bottom: 6px;
      border: none;
      padding-top: 20px;
-     background-image: linear-gradient(to right, #f46b45 0%, #eea849  51%, #f46b45  100%);
-     color: white;
+     color: black;
    }
 
 
    .react-calendar__navigation button {
-    color: white;
+    color: black;
     min-width: 44px;
     background: none;
     font-size: 16px;
@@ -36,7 +35,7 @@
    .react-calendar__navigation button:enabled:hover,
    .react-calendar__navigation button:enabled:focus {
     /* background-color: #f8f8fa; */
-    background-image: linear-gradient(to right, #f46b45 0%, #eea849  51%, #f46b45  100%);
+    /* background-image: linear-gradient(to right, #f46b45 0%, #eea849  51%, #f46b45  100%); */
     
    }
    .react-calendar__navigation button[disabled] {
@@ -61,11 +60,11 @@
     font-weight: bold;
     /* color: blue; */
     border: none;
-    color: white;
+    color: black;
     font-weight: bolder;
     border-radius: 10px;
     /* background: #ff5945; */
-    background-image: linear-gradient(to right, #f46b45 37%,  #f46b45  100%);
+    /* background-image: linear-gradient(to right, #f46b45 37%,  #f46b45  100%); */
 
    }
    .react-calendar__tile--now::after { 
@@ -82,7 +81,7 @@
     /* background: #6f48eb33; */
     border-radius: 6px;
     font-weight: bold;
-    background-image: linear-gradient(to right, #f46b45 37%,  #f46b45  100%);
+    /* background-image: linear-gradient(to right, #f46b45 37%,  #f46b45  100%); */
 
    }
    .react-calendar__tile--hasActive:enabled:hover,
@@ -101,14 +100,14 @@
     /* background: #6f48eb; */
     border-radius: 6px;
     font-weight: bold;
-    color: white;
+    color: black;
     color: blue;
 
    }
    .react-calendar__tile--active:enabled:hover,
    .react-calendar__tile--active:enabled:focus {
     background: #4879eb;
-    color: white;
+    color: black;
    }
    .react-calendar--selectRange .react-calendar__tile--hover {
     background-color: #f8f8fa;
@@ -126,7 +125,7 @@
     border-top-left-radius: 6px;
     border-bottom-left-radius: 6px; */
     /* background: #6f48eb; */
-    color: white;
+    color: black;
     background: blue;
     border: none;
    }
@@ -136,28 +135,28 @@
     border-top-right-radius: 6px;
     border-bottom-right-radius: 6px; */
     background: #6f48eb;
-    color: white;
+    color: black;
     border: none;
    }
 
    .react-calendar__month-view__weekdays{
     text-align: center !important;
     /* color: #4879eb; */
-    color: white;
+    color: black;
     font-weight: bolder;
    }
 
 .react-calendar {
   background-color: #fff;
   /* color: #222; */
-  color: white;
+  color: black;
   border-radius: 8px;
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
   font-family: Arial, Helvetica, sans-serif;
   line-height: 3.125em;
   margin-top: 20px;
   margin-left: 16px;
-  background-image: linear-gradient(to right, #f46b45 0%, #eea849  51%, #f46b45  100%);
+  /* background-image: linear-gradient(to right, #584d4d 0%, #f8f6f3  51%, #fcfaf9  100%); */
 
 }
 
@@ -176,6 +175,7 @@
   margin-bottom: 6px;
   border: none;
   padding-top: 20px;
+  background-color: #12471f;
 }
 
 /* Styles for .react-calendar__navigation button */
@@ -184,7 +184,7 @@
   color: white;
   min-width: 44px;
   background: none;
-  font-size: 16px;
+  font-size: 21px;
   margin-top: 8px;
   border: none;
   font-weight: bolder;
